# AutoGuard-Autonomous-Vehicle-Anomaly-Diagnosis-Toolkit

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py
app/api/: routes.py
app/services/: __init__.py  anomaly_detection.py  counterfactual.py  impact_analysis.py  pipeline.py  replay_diff.py  report.py  root_cause.py
app/static/: index.html
data/: demo_request.json
docs/: architecture.md  data_contract.md  roadmap.md
docs/assets/: .gitkeep
scripts/: publish_to_github.sh  run_demo.py
tests/: test_api.py  test_counterfactual.py  test_impact_analysis.py  test_replay_diff.py
