[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoguard-ai"
version = "0.1.0"
description = "AI-powered anomaly diagnosis toolkit for autonomous vehicle OTA regression"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AutoGuard Team"}]
dependencies = [
  "fastapi==0.128.2",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic==2.13.4",
  "numpy>=2.0,<3.0",
  "scikit-learn==1.8.0",
  "jinja2>=3.1,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.9,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
